# Resumate

./: Readme.md  pyproject.toml  render.yaml  requirements.txt
backend/: Procfile  db.sqlite3  requirements.txt
backend/Resumate/: admin.py  apps.py  backends.py  models.py  resume_parser.py  serializers.py  urls.py  views.py
backend/Resumate/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_alter_customuser_managers.py  0004_alter_customuser_managers.py  0005_alter_customuser_managers.py
backend/backend/: settings.py  urls.py
backend/env/: pyvenv.cfg
backend/env/Scripts/: activate  activate.bat
frontend/: .gitignore  Footer.css  Footer.jsx  package-lock.json  package.json
frontend/src/: App.jsx  Title.css  Title.jsx  index.css  main.jsx
frontend/src/api/: axiosSetup.js
frontend/src/components/: Loading.jsx  NavBar.css  NavBar.jsx  ResumeAnalysisCard.css  ResumeAnalysisCard.jsx  ResumeAnalysisPage.css  ResumeAnalysisPage.jsx  ResumeHero.css  ResumeHero.jsx  ResumeUpload.css  ResumeUpload.jsx
frontend/src/components/AuthModal/: AuthModal.css  AuthModal.jsx
frontend/src/components/context/: AuthContext.jsx
